--- a/peak.css
+++ b/peak.css
@@ -155,6 +155,24 @@ input{
     box-shadow: 3px 3px 11px 0px rgba(0, 0, 0, 0.7);
     transform: translate(5px,-5px);
 }
+input[type="submit"]:disabled{
+    font-family: 'Open Sans', sans-serif;
+    padding:10px ;
+    width:416px;
+    text-align: center;
+    border-radius:2em;
+    margin-top:15px;
+    cursor:pointer;
+    background-color:gray;
+    color:#721520;
+    font-weight:700;
+    font-size: 0.9em;
+    transform: translate(-5px,5px);
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+    cursor:not-allowed;
+    
+}
+
 .cup{
     margin-top:35px;
 }
