--- a/Profile1.css
+++ b/Profile1.css
@@ -1,78 +1,92 @@
-@media screen and (max-width:600px){
-    .grid-container{
-        grid-template-columns: 400px;
+@media screen and (max-width:1100px) and (min-height:1000px){
+    .item2a{
+        position: relative;
+        top:30%;
+        transform:translateY(-30%);
     }
-   
-    input{
-        background-color:transparent ;
-        width:80%;
-        border:1px solid black;
-        margin:3px 0px 3px 0px;
-        padding:3px;
-       
-    }
-    .item1{
-        font-size: 25px;
-        font-weight: 600;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        padding:27.5px 0px 27.5px 0px;
-    }
-    #item2a{
-        padding:10px;
-        background-image: url("bog.jpg");
-        background-size: contain;
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-      
-        background-position: center;
-        margin:0 auto;
-        width:350px;
-        position:relative;
-        top:50%;
-        transform:translateY(-50%);
-    }
-   
 }
-@media screen  and (max-width:400px){
-    label{
-        color:black;
-        font-size: 13px;
-        font-weight: 600;
-        font-family: 'Open Sans', sans-serif;
-        padding-left:10px;
-        
+@media screen and (max-width:900px){
+    .item2a{
+        position: relative;
+        top:30%;
+        transform:translateY(-30%);
     }
-    .grid-container{
-        grid-template-columns: 100%;
+}
+@media screen and (max-width:600px){
+    #note{
+        font-size: 23px;
     }
+    .item2a1{
+        width:350px;
+        margin-top:20px;
+    }
+    .typetwo{
+        width:350px;
+        padding:8px;
+    }
+    input[type="submit"]:disabled{
+        width:350px;
+        padding:8px;
+    }
+ 
     input{
-        background-color:transparent ;
-        width:80%;
-        border:1px solid black;
-        margin:3px 0px 3px 10px;
-        
-        padding:2px;
-       
+        width:70%;
+        font-size: 13px;
     }
-    #item2a{
-        padding:5px;
-        background-image: url("bog.jpg");
-        background-size: contain;
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-position: center;
-        margin:0 auto;
-        width:100%;
-        position:relative;
-        top:50%;
-        transform:translateY(-50%);
-    }
-    #profilebtn{
-        background-color: #fd636b;
-        padding:7px;
-        text-transform: uppercase;
+    
+}
+@media screen and (max-width:400px){
+    .item2a1{
+        width:280px;
         
-        color:white;
+    }
+    .typetwo{
+        width:280px;
+        padding:8px;
+    }
+    input[type="submit"]:disabled{
+        width:280px;
+        padding:8px;
+    }
+}
+@media screen and (max-width:300px){
+    .item2a1{
+        width:250px;
+        
+    }
+    .typetwo{
+        width:250px;
+        padding:8px;
+    }
+    input[type="submit"]:disabled{
+        width:250px;
+        padding:8px;
+    }
+    
+    #department{
+        width:60%;
+    }
+    #note{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width:260px){
+    .item2a1{
+        width:220px;
+        
+    }
+    .typetwo{
+        width:220px;
+        padding:8px;
+    }
+    input[type="submit"]:disabled{
+        width:220px;
+        padding:8px;
+    }
+    
+    input{
+        width:50%;
+        font-size: 11px;
     }
 
 }
