--- a/homepage.css
+++ b/homepage.css
@@ -23,12 +23,7 @@ body,html{
 }
 .wrap{
     text-align: center;
-    padding-top:20px;
-}
-hr{
-    width:300%;
-    transform: translateX(-210px);
-    color: whitesmoke;
+    padding-top:30px;
 }
 .item2{
     font-family: 'Open Sans', sans-serif;
@@ -41,16 +36,18 @@ hr{
     line-height: 2;
     font-weight: 600;
 }
+
 .float{
     float:right;
     padding-top:40px;
     padding-right:20px;
     color:white;
 }
-.text{
+#text{
     font-size: 25px;
     color:white;
     font-weight: 600;
+    text-transform: uppercase;
  
      
 }
@@ -59,7 +56,7 @@ hr{
     height:150px;
     width:150px;
     margin:0 auto;
-    background-image: url("fine.jpg");
+    background-image: url("student1.jpg");
     background-size: contain; 
     clip-path: circle(70px);
 }
@@ -72,20 +69,9 @@ hr{
     height:100%;
     overflow:hidden;
 }
-/* .item1{
-    grid-row-start: 1;
-    grid-row-end: 3;
-    #131313;
-    color:#161d27;
-    background-color:#c0c0c0;
-} */
-.item2, .item4, .item3{
-    /* background-color: green; */
-    background-image: linear-gradient( to right, #3a243b, #1e121e );
-    /* background-color:#392f60; */
-    
-    /* background-image: linear-gradient( to right, #403263, #393161 ); */
 
+.item2, .item4, .item3{
+    background-image: linear-gradient( to right, #3a243b, #1e121e );
 }
 .item1{
     grid-row: 1/span 3;
@@ -103,6 +89,9 @@ hr{
     padding:0px 3px;
     border-right:thin solid white;
     border-left:thin solid white;
+}
+#mat, #depart, #fat{
+    text-transform: uppercase;
 }
 nav{
    
