--- a/homepage1.css
+++ b/homepage1.css
@@ -14,7 +14,7 @@
         font-size:16px;
        
     }
-    .text{
+    #text{
         font-size: 22px;
         color:white;
     }
@@ -98,7 +98,7 @@
         width:220px;
         margin-top:95px;
     }
-    .text{
+    #text{
         font-size: 22px;
      
          
@@ -114,7 +114,7 @@
         font-size: 14px;
         font-weight: 600;
     }
-    .text{
+    #text{
         font-size: 22px;
         
     }
@@ -125,7 +125,7 @@
     .nav-links{
         width:220px;
     }
-    .text{
+    #text{
         font-size: 20px;
          
     }
