--- a/homepage1.css
+++ b/homepage1.css
@@ -1,10 +1,23 @@
 @media screen and (max-width:1100px) and (min-height:1000px){
-    .item3a{
+    #item3a{
         position: relative;
         top:30%;
         transform:translateY(-30%);
         
     }
+    #item3b{
+        
+        position: relative;
+        top:50%;
+        transform:translateY(-50%);
+        
+    }
+    #item3c{
+        position: relative;
+        top:50%;
+        transform:translateY(-50%);
+    }
+   
 }
 @media screen and (max-width:900px){
     a.admit:hover{
@@ -18,22 +31,30 @@
         font-size: 22px;
         color:white;
     }
-    .item3a{
+    #item3a{
         position: relative;
         top:20%;
         transform:translateY(-20%);
         
     }
+    #item3b{
+        
+        position: relative;
+        top:20%;
+        transform:translateY(-20%);
+        
+    }
+   
     .wrap{
         text-align: center;
         padding-top:5px;
     }
     .grid-container{
         grid-template-columns: 0px auto;
-        grid-template-rows: 250px auto 90px;
+        grid-template-rows: 250px auto 30px;
         grid-gap:0px;
         height:100%;
-        overflow:hidden;
+     
     }
     .item1{
         grid-row: 1/span 3;
@@ -99,7 +120,7 @@
         margin-top:95px;
     }
     #text{
-        font-size: 22px;
+        font-size: 20px;
      
          
     }
@@ -107,6 +128,12 @@
         padding:60px 0px 0px 10px;
     
     }
+    #foot{
+      
+        font-size: 0.8em;
+      
+    }
+   
 
 }
 @media screen and (max-width:450px){
@@ -115,18 +142,33 @@
         font-weight: 600;
     }
     #text{
-        font-size: 22px;
+        font-size: 18px;
         
     }
+    #item3b{
+        
+        position: relative;
+        top:0%;
+        transform:translateY(-0%);
+        
+    }
+    #foot{
+    
+      
+        font-size: 0.7em;
+       
+      
+    }
+   
 }
 @media screen and (max-width:300px){
  
-    }
+    
     .nav-links{
         width:220px;
     }
     #text{
-        font-size: 20px;
+        font-size: 18px;
          
     }
     
